Bug 216157 - WARNING: CPU: 0 PID: 232 at include/linux/skbuff.h:2911 .rtl8169_features_check+0x290/0x4f0
Summary: WARNING: CPU: 0 PID: 232 at include/linux/skbuff.h:2911 .rtl8169_features_che...
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Network (show other bugs)
Hardware: PPC-64 Linux
: P1 normal
Assignee: drivers_network@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-20 23:34 UTC by Erhard F.
Modified: 2022-07-14 13:41 UTC (History)
1 user (show)

See Also:
Kernel Version: 5.19-rc3
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg (5.19-rc3, PowerMac G5 11,2) (43.58 KB, text/plain)
2022-06-20 23:34 UTC, Erhard F.
Details
kernel .config (5.19-rc3, PowerMac G5 11,2) (112.24 KB, text/plain)
2022-06-20 23:35 UTC, Erhard F.
Details

Description Erhard F. 2022-06-20 23:34:56 UTC
Created attachment 301233 [details]
dmesg (5.19-rc3, PowerMac G5 11,2)

Happens shortly after booting the G5. And it happens every time:

[...]
------------[ cut here ]------------
WARNING: CPU: 0 PID: 232 at include/linux/skbuff.h:2911 .rtl8169_features_check+0x290/0x4f0
Modules linked in: windfarm_cpufreq_clamp radeon windfarm_smu_sensors windfarm_smu_controls snd_aoa_codec_onyx windfarm_pm112 snd_aoa_fabric_layout snd_aoa drm_ttm_helper ohci_pci snd_aoa_i2sbus ehci_pci ttm ohci_hcd i2c_algo_bit windfarm_pid drm_display_helper snd_aoa_soundbus ehci_hcd snd_pcm snd_timer usbcore sr_mod drm_kms_helper cfg80211 snd firewire_ohci cdrom firewire_core sysimgblt soundcore pmac_zilog tg3 syscopyarea serial_core rack_meter sysfillrect crc_itu_t rfkill fb_sys_fops usb_common windfarm_lm75_sensor hwmon windfarm_smu_sat windfarm_max6690_sensor windfarm_core drm zram zsmalloc drm_panel_orientation_quirks backlight fuse configfs
CPU: 0 PID: 232 Comm: systemd-resolve Not tainted 5.19.0-rc3-PMacG5+ #2
NIP:  c00000000082f260 LR: c0000000008b4ff0 CTR: c00000000082efd0
REGS: c000000018c1aa90 TRAP: 0700   Not tainted  (5.19.0-rc3-PMacG5+)
MSR:  9000000000029032 <SF,HV,EE,ME,IR,DR,RI>  CR: 22042440  XER: 00000000
IRQMASK: 0 
GPR00: c0000000008b52c8 c000000018c1ad30 c000000001143800 c000000005a4af80 
GPR04: c000000001e58000 00000100000041b2 c0000000017b4a00 0000000000000000 
GPR08: 000000000000ffff 000000000000ffff 000000000000ffff 0000000000000080 
GPR12: 0000000082042440 c00000000170f000 0000000000000000 00000000c0a80201 
GPR16: 00000000c0a80206 c00000001a5a9180 0000000000000035 c00000001a5a9180 
GPR20: c000000000d1e468 0000000000000000 0000000000000001 00000000c0a80201 
GPR24: 0000000000000001 c00000047f71dd70 0000000000000000 00000100000041b2 
GPR28: c000000001e58000 c000000001e58000 00000100000041b2 c000000005a4af80 
NIP [c00000000082f260] .rtl8169_features_check+0x290/0x4f0
LR [c0000000008b4ff0] .netif_skb_features+0xa0/0x350
Call Trace:
[c000000018c1ad30] [0000000000092a20] 0x92a20 (unreliable)
[c000000018c1adf0] [0000000000000001] 0x1
[c000000018c1ae80] [c0000000008b52c8] .validate_xmit_skb.constprop.0+0x28/0x4e0
[c000000018c1af30] [c0000000008b57d8] .validate_xmit_skb_list+0x58/0xd0
[c000000018c1afd0] [c000000000919d60] .sch_direct_xmit+0x170/0x400
[c000000018c1b090] [c0000000008b6324] .__dev_queue_xmit+0x474/0xd80
[c000000018c1b190] [c0000000009aac74] .arp_send_dst+0xb4/0xe0
[c000000018c1b210] [c0000000009ab1e0] .arp_solicit+0x100/0x2b0
[c000000018c1b310] [c0000000008c277c] .neigh_probe+0x7c/0xd0
[c000000018c1b390] [c0000000008c9cb0] .__neigh_event_send+0x2c0/0x500
[c000000018c1b450] [c0000000008ca1a0] .neigh_resolve_output+0x190/0x280
[c000000018c1b4f0] [c000000000958bd0] .ip_finish_output2+0x1a0/0x6a0
[c000000018c1b5b0] [c000000000958078] .ip_local_out+0x88/0xe0
[c000000018c1b640] [c00000000095c5d4] .ip_send_skb+0x24/0xc0
[c000000018c1b6d0] [c0000000009a51dc] .udp_send_skb+0x16c/0x560
[c000000018c1b780] [c0000000009a5f9c] .udp_sendmsg+0x91c/0xc90
[c000000018c1b9a0] [c0000000009b871c] .inet_sendmsg+0x5c/0xb0
[c000000018c1ba30] [c00000000087b018] .sock_write_iter+0xd8/0x170
[c000000018c1bb20] [c0000000002ec444] .new_sync_write+0x104/0x180
[c000000018c1bc10] [c0000000002ef1d0] .vfs_write+0x2e0/0x410
[c000000018c1bcc0] [c0000000002ef524] .ksys_write+0xe4/0x130
[c000000018c1bd60] [c000000000021f60] .system_call_exception+0x130/0x270
[c000000018c1be10] [c00000000000b33c] system_call_common+0xec/0x250
--- interrupt: c00 at 0x3fff8f966694
NIP:  00003fff8f966694 LR: 00000001282b7930 CTR: 0000000000000000
REGS: c000000018c1be80 TRAP: 0c00   Not tainted  (5.19.0-rc3-PMacG5+)
MSR:  900000000200f032 <SF,HV,VEC,EE,PR,FP,ME,IR,DR,RI>  CR: 24044287  XER: 00000000
IRQMASK: 0 
GPR00: 0000000000000004 00003fffdaa319e0 00003fff8fa78200 0000000000000018 
GPR04: 0000000144ad1bb0 0000000000000049 00003fffdaa31af0 00003fffdaa31af4 
GPR08: 0000000000000000 0000000000000000 0000000000000000 0000000000000000 
GPR12: 0000000000000000 00003fff905d4810 0000000000000000 00000000000005dc 
GPR16: 00000000000005dc 0000000000000065 00000001282e194c ff02000000000000 
GPR20: 00000001282e12e8 00000001282e1da8 0003d9f010000081 00003fffdaa31b90 
GPR24: 00003fffdaa31b98 0000000144ac1340 ffffffffe00000fc ffffffffe00000fb 
GPR28: 0000000000030d40 0000000000000049 0000000144ad1bb0 0000000000000018 
NIP [00003fff8f966694] 0x3fff8f966694
LR [00000001282b7930] 0x1282b7930
--- interrupt: c00
Instruction dump:
41820120 79292528 7d4a4a14 812a0028 28090006 4181010c 3f80ffe2 a13f00a8 
639cffff 7f7be038 eb8100a0 4bfffe74 <0fe00000> 7c0802a6 fb010080 fb210088 
---[ end trace 0000000000000000 ]---
------------[ cut here ]------------
WARNING: CPU: 0 PID: 232 at include/linux/skbuff.h:2911 .rtl8169_start_xmit+0x890/0xa80
Modules linked in: windfarm_cpufreq_clamp radeon windfarm_smu_sensors windfarm_smu_controls snd_aoa_codec_onyx windfarm_pm112 snd_aoa_fabric_layout snd_aoa drm_ttm_helper ohci_pci snd_aoa_i2sbus ehci_pci ttm ohci_hcd i2c_algo_bit windfarm_pid drm_display_helper snd_aoa_soundbus ehci_hcd snd_pcm snd_timer usbcore sr_mod drm_kms_helper cfg80211 snd firewire_ohci cdrom firewire_core sysimgblt soundcore pmac_zilog tg3 syscopyarea serial_core rack_meter sysfillrect crc_itu_t rfkill fb_sys_fops usb_common windfarm_lm75_sensor hwmon windfarm_smu_sat windfarm_max6690_sensor windfarm_core drm zram zsmalloc drm_panel_orientation_quirks backlight fuse configfs
CPU: 0 PID: 232 Comm: systemd-resolve Tainted: G        W         5.19.0-rc3-PMacG5+ #2
NIP:  c00000000082fd50 LR: c0000000008b5bf8 CTR: c00000000082f4c0
REGS: c000000018c1ab80 TRAP: 0700   Tainted: G        W          (5.19.0-rc3-PMacG5+)
MSR:  9000000000029032 <SF,HV,EE,ME,IR,DR,RI>  CR: 22042442  XER: 00000000
IRQMASK: 0 
GPR00: c0000000008b5bf8 c000000018c1ae20 c000000001143800 c000000005a4af80 
GPR04: c000000001e58000 000000000000ffff c000000018c1b054 0000000000000000 
GPR08: 000000000000ffff c00000001af01a80 000000000000ffff 0000000000000080 
GPR12: 0000000022042442 c00000000170f000 0000000000000000 00000000c0a80201 
GPR16: 00000000c0a80206 c00000001a5a9180 0000000000000035 c00000001a5a9180 
GPR20: c000000000d1e468 0000000000000000 00000000000002e3 c000000001e58980 
GPR24: c000000001e58080 c000000018c1b054 0000000000000000 0000000000000000 
GPR28: c00000001af01a00 0000000000000000 c000000001e58000 c000000005a4af80 
NIP [c00000000082fd50] .rtl8169_start_xmit+0x890/0xa80
LR [c0000000008b5bf8] .dev_hard_start_xmit+0xb8/0x1f0
Call Trace:
[c000000018c1ae20] [c00000001e3ea378] 0xc00000001e3ea378 (unreliable)
[c000000018c1af20] [c0000000008b5bf8] .dev_hard_start_xmit+0xb8/0x1f0
[c000000018c1afd0] [c000000000919d24] .sch_direct_xmit+0x134/0x400
[c000000018c1b090] [c0000000008b6324] .__dev_queue_xmit+0x474/0xd80
[c000000018c1b190] [c0000000009aac74] .arp_send_dst+0xb4/0xe0
[c000000018c1b210] [c0000000009ab1e0] .arp_solicit+0x100/0x2b0
[c000000018c1b310] [c0000000008c277c] .neigh_probe+0x7c/0xd0
[c000000018c1b390] [c0000000008c9cb0] .__neigh_event_send+0x2c0/0x500
[c000000018c1b450] [c0000000008ca1a0] .neigh_resolve_output+0x190/0x280
[c000000018c1b4f0] [c000000000958bd0] .ip_finish_output2+0x1a0/0x6a0
[c000000018c1b5b0] [c000000000958078] .ip_local_out+0x88/0xe0
[c000000018c1b640] [c00000000095c5d4] .ip_send_skb+0x24/0xc0
[c000000018c1b6d0] [c0000000009a51dc] .udp_send_skb+0x16c/0x560
[c000000018c1b780] [c0000000009a5f9c] .udp_sendmsg+0x91c/0xc90
[c000000018c1b9a0] [c0000000009b871c] .inet_sendmsg+0x5c/0xb0
[c000000018c1ba30] [c00000000087b018] .sock_write_iter+0xd8/0x170
[c000000018c1bb20] [c0000000002ec444] .new_sync_write+0x104/0x180
[c000000018c1bc10] [c0000000002ef1d0] .vfs_write+0x2e0/0x410
[c000000018c1bcc0] [c0000000002ef524] .ksys_write+0xe4/0x130
[c000000018c1bd60] [c000000000021f60] .system_call_exception+0x130/0x270
[c000000018c1be10] [c00000000000b33c] system_call_common+0xec/0x250
--- interrupt: c00 at 0x3fff8f966694
NIP:  00003fff8f966694 LR: 00000001282b7930 CTR: 0000000000000000
REGS: c000000018c1be80 TRAP: 0c00   Tainted: G        W          (5.19.0-rc3-PMacG5+)
MSR:  900000000200f032 <SF,HV,VEC,EE,PR,FP,ME,IR,DR,RI>  CR: 24044287  XER: 00000000
IRQMASK: 0 
GPR00: 0000000000000004 00003fffdaa319e0 00003fff8fa78200 0000000000000018 
GPR04: 0000000144ad1bb0 0000000000000049 00003fffdaa31af0 00003fffdaa31af4 
GPR08: 0000000000000000 0000000000000000 0000000000000000 0000000000000000 
GPR12: 0000000000000000 00003fff905d4810 0000000000000000 00000000000005dc 
GPR16: 00000000000005dc 0000000000000065 00000001282e194c ff02000000000000 
GPR20: 00000001282e12e8 00000001282e1da8 0003d9f010000081 00003fffdaa31b90 
GPR24: 00003fffdaa31b98 0000000144ac1340 ffffffffe00000fc ffffffffe00000fb 
GPR28: 0000000000030d40 0000000000000049 0000000144ad1bb0 0000000000000018 
NIP [00003fff8f966694] 0x3fff8f966694
LR [00000001282b7930] 0x1282b7930
--- interrupt: c00
Instruction dump:
81210084 fb2100c8 65294000 4bfffecc fb2100c8 3d200006 91210080 e8df00c0 
811f0068 80bf006c 4bfff # inxi -bZ
System:
  Host: T800 Kernel: 5.19.0-rc3-PMacG5+ ppc64 bits: 64 Console: pty pts/0
    Distro: Gentoo Base System release 2.8
Machine:
  Type: PPC System: PowerMac11 2 details: N/A
    mobo: PowerMac11,2 MacRISC4 Power Macintosh  serial: R6V
CPU:
  Info: dual core PPC970MP altivec supported [MCP] speed (MHz): avg: 1150
    min/max: 1150/2300
Graphics:
  Device-1: NVIDIA NV43 [GeForce 6600 LE] driver: N/A
  Device-2: AMD RV516 [Radeon X1300/X1550 Series] driver: radeon v: kernel
  Display: x11 server: X.Org 21.1.1 driver: loaded: ati,radeon
    resolution: 1400x900~60Hz
  OpenGL: renderer: llvmpipe (LLVM 13.0.1 128 bits) v: 4.5 Mesa 22.0.3
Network:
  Device-1: Broadcom NetXtreme BCM5780 Gigabit Ethernet driver: tg3
  Device-2: Broadcom NetXtreme BCM5780 Gigabit Ethernet driver: tg3
  Device-3: Realtek RTL8111/8168/8411 PCI Express Gigabit Ethernet
    driver: r8169
84c 60000000 <0fe00000> 4bfffdac 60000000 60000000 
---[ end trace 0000000000000000 ]---

Some data about the machine:

 # inxi -bZ
System:
  Host: T800 Kernel: 5.19.0-rc3-PMacG5+ ppc64 bits: 64 Console: pty pts/0
    Distro: Gentoo Base System release 2.8
Machine:
  Type: PPC System: PowerMac11 2 details: N/A
    mobo: PowerMac11,2 MacRISC4 Power Macintosh  serial: R6V
CPU:
  Info: dual core PPC970MP altivec supported [MCP] speed (MHz): avg: 1150
    min/max: 1150/2300
Graphics:
  Device-1: NVIDIA NV43 [GeForce 6600 LE] driver: N/A
  Device-2: AMD RV516 [Radeon X1300/X1550 Series] driver: radeon v: kernel
  Display: x11 server: X.Org 21.1.1 driver: loaded: ati,radeon
    resolution: 1400x900~60Hz
  OpenGL: renderer: llvmpipe (LLVM 13.0.1 128 bits) v: 4.5 Mesa 22.0.3
Network:
  Device-1: Broadcom NetXtreme BCM5780 Gigabit Ethernet driver: tg3
  Device-2: Broadcom NetXtreme BCM5780 Gigabit Ethernet driver: tg3
  Device-3: Realtek RTL8111/8168/8411 PCI Express Gigabit Ethernet
    driver: r8169

 # lspci 
0000:00:0b.0 PCI bridge: Apple Inc. CPC945 PCIe Bridge
0000:0a:00.0 VGA compatible controller: NVIDIA Corporation NV43 [GeForce 6600 LE] (rev a2)
0001:00:00.0 Host bridge: Apple Inc. U4 HT Bridge
0001:00:01.0 PCI bridge: Broadcom BCM5780 [HT2000] PCI-X bridge (rev a3)
0001:00:02.0 PCI bridge: Broadcom BCM5780 [HT2000] PCI-X bridge (rev a3)
0001:00:03.0 PCI bridge: Broadcom BCM5780 [HT2000] PCI-Express Bridge (rev a3)
0001:00:04.0 PCI bridge: Broadcom BCM5780 [HT2000] PCI-Express Bridge (rev a3)
0001:00:05.0 PCI bridge: Broadcom BCM5780 [HT2000] PCI-Express Bridge (rev a3)
0001:00:06.0 PCI bridge: Broadcom BCM5780 [HT2000] PCI-Express Bridge (rev a3)
0001:00:07.0 PCI bridge: Apple Inc. Shasta PCI Bridge
0001:00:08.0 PCI bridge: Apple Inc. Shasta PCI Bridge
0001:00:09.0 PCI bridge: Apple Inc. Shasta PCI Bridge
0001:01:07.0 Unassigned class [ff00]: Apple Inc. Shasta Mac I/O
0001:01:0b.0 USB controller: NEC Corporation OHCI USB Controller (rev 43)
0001:01:0b.1 USB controller: NEC Corporation OHCI USB Controller (rev 43)
0001:01:0b.2 USB controller: NEC Corporation uPD72010x USB 2.0 Controller (rev 04)
0001:03:0c.0 IDE interface: Broadcom K2 SATA
0001:03:0d.0 Unassigned class [ff00]: Apple Inc. Shasta IDE
0001:03:0e.0 FireWire (IEEE 1394): Apple Inc. Shasta Firewire
0001:05:04.0 Ethernet controller: Broadcom Inc. and subsidiaries NetXtreme BCM5780 Gigabit Ethernet (rev 03)
0001:05:04.1 Ethernet controller: Broadcom Inc. and subsidiaries NetXtreme BCM5780 Gigabit Ethernet (rev 03)
0001:06:00.0 VGA compatible controller: Advanced Micro Devices, Inc. [AMD/ATI] RV516 [Radeon X1300/X1550 Series]
0001:06:00.1 Display controller: Advanced Micro Devices, Inc. [AMD/ATI] RV516 [Radeon X1300/X1550 Series] (Secondary)
0001:08:00.0 Non-Volatile memory controller: Intel Corporation SSD Pro 7600p/760p/E 6100p Series ( # lspci -v -s 0001:09:00.0
0001:09:00.0 Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (rev 06)
	Subsystem: TP-LINK Technologies Co., Ltd. TG-3468 Gigabit PCI Express Network Adapter
	Device tree node: /sys/firmware/devicetree/base/ht@0,f2000000/pci@6/pci7470,3468@0
	Flags: bus master, fast devsel, latency 0, IRQ 62
	I/O ports at 1000 [size=256]
	Memory at a0100000 (64-bit, non-prefetchable) [size=4K]
	Memory at a0104000 (64-bit, prefetchable) [size=16K]
	Capabilities: [40] Power Management version 3
	Capabilities: [50] MSI: Enable- Count=1/1 Maskable- 64bit+
	Capabilities: [70] Express Endpoint, MSI 01
	Capabilities: [b0] MSI-X: Enable- Count=4 Masked-
	Capabilities: [d0] Vital Product Data
	Kernel driver in use: r8169
rev 03)
0001:09:00.0 Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (rev 06)

 # lspci -v -s 0001:09:00.0
0001:09:00.0 Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (rev 06)
	Subsystem: TP-LINK Technologies Co., Ltd. TG-3468 Gigabit PCI Express Network Adapter
	Device tree node: /sys/firmware/devicetree/base/ht@0,f2000000/pci@6/pci7470,3468@0
	Flags: bus master, fast devsel, latency 0, IRQ 62
	I/O ports at 1000 [size=256]
	Memory at a0100000 (64-bit, non-prefetchable) [size=4K]
	Memory at a0104000 (64-bit, prefetchable) [size=16K]
	Capabilities: [40] Power Management version 3
	Capabilities: [50] MSI: Enable- Count=1/1 Maskable- 64bit+
	Capabilities: [70] Express Endpoint, MSI 01
	Capabilities: [b0] MSI-X: Enable- Count=4 Masked-
	Capabilities: [d0] Vital Product Data
	Kernel driver in use: r8169
Comment 1 Erhard F. 2022-06-20 23:35:35 UTC
Created attachment 301234 [details]
kernel .config (5.19-rc3, PowerMac G5 11,2)
Comment 2 Heiner Kallweit 2022-06-27 22:06:04 UTC
This warning seems to be triggered by anew check introduced with 	66e4c8d95008 ("net: warn if transport header was not set").
Could you please test with the following applied:

diff --git a/drivers/net/ethernet/realtek/r8169_main.c b/drivers/net/ethernet/realtek/r8169_main.c
index 3098d6672..1b7fdb4f0 100644
--- a/drivers/net/ethernet/realtek/r8169_main.c
+++ b/drivers/net/ethernet/realtek/r8169_main.c
@@ -4190,7 +4190,6 @@ static void rtl8169_tso_csum_v1(struct sk_buff *skb, u32 *opts)
 static bool rtl8169_tso_csum_v2(struct rtl8169_private *tp,
 				struct sk_buff *skb, u32 *opts)
 {
-	u32 transport_offset = (u32)skb_transport_offset(skb);
 	struct skb_shared_info *shinfo = skb_shinfo(skb);
 	u32 mss = shinfo->gso_size;
 
@@ -4207,7 +4206,7 @@ static bool rtl8169_tso_csum_v2(struct rtl8169_private *tp,
 			WARN_ON_ONCE(1);
 		}
 
-		opts[0] |= transport_offset << GTTCPHO_SHIFT;
+		opts[0] |= skb_transport_offset(skb) << GTTCPHO_SHIFT;
 		opts[1] |= mss << TD1_MSS_SHIFT;
 	} else if (skb->ip_summed == CHECKSUM_PARTIAL) {
 		u8 ip_protocol;
@@ -4235,7 +4234,7 @@ static bool rtl8169_tso_csum_v2(struct rtl8169_private *tp,
 		else
 			WARN_ON_ONCE(1);
 
-		opts[1] |= transport_offset << TCPHO_SHIFT;
+		opts[1] |= skb_transport_offset(skb) << TCPHO_SHIFT;
 	} else {
 		unsigned int padto = rtl_quirk_packet_padto(tp, skb);
 
@@ -4402,14 +4401,13 @@ static netdev_features_t rtl8169_features_check(struct sk_buff *skb,
 						struct net_device *dev,
 						netdev_features_t features)
 {
-	int transport_offset = skb_transport_offset(skb);
 	struct rtl8169_private *tp = netdev_priv(dev);
 
 	if (skb_is_gso(skb)) {
 		if (tp->mac_version == RTL_GIGA_MAC_VER_34)
 			features = rtl8168evl_fix_tso(skb, features);
 
-		if (transport_offset > GTTCPHO_MAX &&
+		if (skb_transport_offset(skb) > GTTCPHO_MAX &&
 		    rtl_chip_supports_csum_v2(tp))
 			features &= ~NETIF_F_ALL_TSO;
 	} else if (skb->ip_summed == CHECKSUM_PARTIAL) {
@@ -4420,7 +4418,7 @@ static netdev_features_t rtl8169_features_check(struct sk_buff *skb,
 		if (rtl_quirk_packet_padto(tp, skb))
 			features &= ~NETIF_F_CSUM_MASK;
 
-		if (transport_offset > TCPHO_MAX &&
+		if (skb_transport_offset(skb) > TCPHO_MAX &&
 		    rtl_chip_supports_csum_v2(tp))
 			features &= ~NETIF_F_CSUM_MASK;
 	}
-- 
2.36.1
Comment 3 Erhard F. 2022-06-28 22:28:02 UTC
(In reply to Heiner Kallweit from comment #2)
> This warning seems to be triggered by anew check introduced with 
> 66e4c8d95008 ("net: warn if transport header was not set").
> Could you please test with the following applied:
With your patch applied on top of 5.19-rc4 the warning is gone. Thanks!
Comment 4 Erhard F. 2022-07-14 13:41:15 UTC
Meanwhile the patch found its' way in the -rc and stable kernels.

Closing here.

Note You need to log in before you can comment on or make changes to this bug.